--- a/cloud_computing/.env
+++ b/cloud_computing/.env
@@ -1,6 +1,6 @@
 SECRET_KEY=django-insecure-zf#(ldtj*3ge&6_e_6d@19@c0c)13(2y80wg7n-gnd7v*)h@#@
 
-DB_ENGINE=django.db.backends.postgresql_psycopg2
+DB_ENGINE=django.db.backends.postgresql
 DB_NAME=cloud1
 DB_USER=postgres
 DB_PASSWORD=1111
