App contects with database in docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,22 @@
-version: "3.7"
-volumes:
-    postgres-data: {}
+version: "3.8"
 
 services:
-  django:
+  django1:
     build: .
     restart: on-failure:10
     ports:
       - "8000:8000"
     env_file:
       - ./cloud_computing/.env
+    links:
+      - postgres_db1
     depends_on:
-      - postgres_db
-  
-  postgres_db:
+      - postgres_db1
+    volumes:
+    - pdaj_data:/usr/src
+    
+    
+  postgres_db1:
     image: postgres
     restart: on-failure
     ports:
@@ -21,6 +24,7 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=1111
-      - POSTGRES_DB=cloud1
-    volumes:
-     - postgres-data:/var/lib/postgres   
+      - POSTGRES_DB=cloud1  
+
+volumes:
+  pdaj_data:
