--- a/cloud_computing/.env
+++ b/cloud_computing/.env
@@ -4,5 +4,5 @@ DB_ENGINE=django.db.backends.postgresql
 DB_NAME=cloud1
 DB_USER=postgres
 DB_PASSWORD=1111
-DB_HOST=localhost
+DB_HOST=postgres_db1
 DB_PORT=5432
